@@ -1,4 +1,8 @@
 2013-04-13  Roland Winkler  <winkler@gnu.org>
+	* lisp/bbdb.el (bbdb-hash-record, bbdb-change-record): Fix
+	docstring.
+
+2013-04-13  Roland Winkler  <winkler@gnu.org>
 	* lisp/bbdb.el (bbdb-new-mails-primary): Change default to query.
 
 2013-04-13  Roland Winkler  <winkler@gnu.org>
